Address two issues in IE only introduced by the iframe: supress scrollbar by removing bottom padding on the iframe content (unneeded, outer container has padding now) and work around a problem where width measurements during page load don't stay consistent for the iframe.

--- a/public/CSS/canadasEnergyFutureVisualization.css
+++ b/public/CSS/canadasEnergyFutureVisualization.css
@@ -6,7 +6,6 @@
   line-height: 1em;
   font-weight: 400;
   color: #333333;
-  margin-bottom: 20px;
 }
 
 #canadasEnergyFutureVisualization h1, 
